--- a/index.html
+++ b/index.html
@@ -2,28 +2,49 @@
 <html lang="de">
 <head>
 <meta charset="UTF-8">
-<title>Nr. 7 Choral – O große Lieb</title>
-
-<!-- Tone.js + @tonejs/midi -->
-<script src="https://unpkg.com/tone@14.7.77/build/Tone.js"></script>
-<script src="https://unpkg.com/@tonejs/midi"></script>
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Choräle - Johannespassion BWV 245, UA: 7.4.1724</title>
 
 <style>
-body { font-family: Arial, sans-serif; padding: 20px; }
-table { border-collapse: collapse; width: 100%; margin-bottom: 20px; }
-th, td { border: 1px solid #ccc; padding: 10px; text-align: center; }
-button { padding: 6px 12px; margin: 2px; }
+body {
+    font-family: Arial, sans-serif;
+    padding: 20px;
+    background-color: #f9f9f9;
+}
+
+h1 {
+    margin-bottom: 20px;
+}
+
+table {
+    border-collapse: collapse;
+    width: 100%;
+    background-color: white;
+}
+
+th, td {
+    border: 1px solid #ccc;
+    padding: 8px;
+    text-align: center;
+}
+
+th {
+    background-color: #eee;
+}
+
+audio {
+    width: 140px;
+}
 </style>
 </head>
 <body>
 
-<h2>Nr. 7 Choral – O große Lieb</h2>
+<h1>Choräle - Johannespassion BWV 245, UA: 7.4.1724</h1>
 
 <table>
 <thead>
 <tr>
-<th>Choral</th>
-<th>Tutti</th>
+<th>Nr.</th>
 <th>S</th>
 <th>A</th>
 <th>T</th>
@@ -31,34 +52,31 @@ button { padding: 6px 12px; margin: 2px; }
 </tr>
 </thead>
 <tbody>
+
 <tr>
-<td>Nr. 7 Choral – O große Lieb</td>
-<td>
-<button onclick="loadMidi('midi/07-Lieb-tutti.mid')">Play</button>
-<button onclick="stop()">Stop</button>
-</td>
-<td>
-<button onclick="loadMidi('midi/07-Lieb-S.mid')">Play</button>
-<button onclick="stop()">Stop</button>
-</td>
-<td>
-<button onclick="loadMidi('midi/07-Lieb-A.mid')">Play</button>
-<button onclick="stop()">Stop</button>
-</td>
-<td>
-<button onclick="loadMidi('midi/07-Lieb-T.mid')">Play</button>
-<button onclick="stop()">Stop</button>
-</td>
-<td>
-<button onclick="loadMidi('midi/07-Lieb-B.mid')">Play</button>
-<button onclick="stop()">Stop</button>
-</td>
+<td>7</td>
+<td><audio controls preload="none" src="audio/nr7-S.m4a"></audio></td>
+<td><audio controls preload="none" src="audio/nr7-A.m4a"></audio></td>
+<td><audio controls preload="none" src="audio/nr7-T.m4a"></audio></td>
+<td><audio controls preload="none" src="audio/nr7-B.m4a"></audio></td>
 </tr>
-</tbody>
-</table>
 
-<!-- Minimalistischer Player -->
-<script src="js/player.js"></script>
+<tr>
+<td>9</td>
+<td><audio controls preload="none" src="audio/nr9-S.m4a"></audio></td>
+<td><audio controls preload="none" src="audio/nr9-A.m4a"></audio></td>
+<td><audio controls preload="none" src="audio/nr9-T.m4a"></audio></td>
+<td><audio controls preload="none" src="audio/nr9-B.m4a"></audio></td>
+</tr>
 
-</body>
-</html>
+<tr>
+<td>15</td>
+<td><audio controls preload="none" src="audio/nr15-S.m4a"></audio></td>
+<td><audio controls preload="none" src="audio/nr15-A.m4a"></audio></td>
+<td><audio controls preload="none" src="audio/nr15-T.m4a"></audio></td>
+<td><audio controls preload="none" src="audio/nr15-B.m4a"></audio></td>
+</tr>
+
+<tr>
+<td>20</td>
+<td><audio controls preload="none" src="audio/nr20-S.m4
