--- a/index.html
+++ b/index.html
@@ -1,3 +1,10 @@
+<!DOCTYPE html>
+<html lang="de">
+<head>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Choräle - Johannespassion BWV 245, UA: 7.4.1724</title>
+
 <style>
 body {
     font-family: system-ui, -apple-system, sans-serif;
@@ -76,3 +83,139 @@ audio {
     }
 }
 </style>
+</head>
+<body>
+
+<h1>Choräle - Johannespassion BWV 245, UA: 7.4.1724</h1>
+
+<table>
+<thead>
+<tr>
+<th>Nr.</th>
+<th>S</th>
+<th>A</th>
+<th>T</th>
+<th>B</th>
+</tr>
+</thead>
+<tbody>
+
+<!-- 7 -->
+<tr>
+<td>7</td>
+<td><audio controls preload="none" src="audio/nr7-S.m4a"></audio></td>
+<td><audio controls preload="none" src="audio/nr7-A.m4a"></audio></td>
+<td><audio controls preload="none" src="audio/nr7-T.m4a"></audio></td>
+<td><audio controls preload="none" src="audio/nr7-B.m4a"></audio></td>
+</tr>
+
+<!-- 9 -->
+<tr>
+<td>9</td>
+<td><audio controls preload="none" src="audio/nr9-S.m4a"></audio></td>
+<td><audio controls preload="none" src="audio/nr9-A.m4a"></audio></td>
+<td><audio controls preload="none" src="audio/nr9-T.m4a"></audio></td>
+<td><audio controls preload="none" src="audio/nr9-B.m4a"></audio></td>
+</tr>
+
+<!-- 15 -->
+<tr>
+<td>15</td>
+<td><audio controls preload="none" src="audio/nr15-S.m4a"></audio></td>
+<td><audio controls preload="none" src="audio/nr15-A.m4a"></audio></td>
+<td><audio controls preload="none" src="audio/nr15-T.m4a"></audio></td>
+<td><audio controls preload="none" src="audio/nr15-B.m4a"></audio></td>
+</tr>
+
+<!-- 20 -->
+<tr>
+<td>20</td>
+<td><audio controls preload="none" src="audio/nr20-S.m4a"></audio></td>
+<td><audio controls preload="none" src="audio/nr20-A.m4a"></audio></td>
+<td><audio controls preload="none" src="audio/nr20-T.m4a"></audio></td>
+<td><audio controls preload="none" src="audio/nr20-B.m4a"></audio></td>
+</tr>
+
+<!-- 21 -->
+<tr>
+<td>21</td>
+<td><audio controls preload="none" src="audio/nr21-S.m4a"></audio></td>
+<td><audio controls preload="none" src="audio/nr21-A.m4a"></audio></td>
+<td><audio controls preload="none" src="audio/nr21-T.m4a"></audio></td>
+<td><audio controls preload="none" src="audio/nr21-B.m4a"></audio></td>
+</tr>
+
+<!-- 27 -->
+<tr>
+<td>27</td>
+<td><audio controls preload="none" src="audio/nr27-S.m4a"></audio></td>
+<td><audio controls preload="none" src="audio/nr27-A.m4a"></audio></td>
+<td><audio controls preload="none" src="audio/nr27-T.m4a"></audio></td>
+<td><audio controls preload="none" src="audio/nr27-B.m4a"></audio></td>
+</tr>
+
+<!-- 40 -->
+<tr>
+<td>40</td>
+<td><audio controls preload="none" src="audio/nr40-S.m4a"></audio></td>
+<td><audio controls preload="none" src="audio/nr40-A.m4a"></audio></td>
+<td><audio controls preload="none" src="audio/nr40-T.m4a"></audio></td>
+<td><audio controls preload="none" src="audio/nr40-B.m4a"></audio></td>
+</tr>
+
+<!-- 52 -->
+<tr>
+<td>52</td>
+<td><audio controls preload="none" src="audio/nr52-S.m4a"></audio></td>
+<td><audio controls preload="none" src="audio/nr52-A.m4a"></audio></td>
+<td><audio controls preload="none" src="audio/nr52-T.m4a"></audio></td>
+<td><audio controls preload="none" src="audio/nr52-B.m4a"></audio></td>
+</tr>
+
+<!-- 56 -->
+<tr>
+<td>56</td>
+<td><audio controls preload="none" src="audio/nr56-S.m4a"></audio></td>
+<td><audio controls preload="none" src="audio/nr56-A.m4a"></audio></td>
+<td><audio controls preload="none" src="audio/nr56-T.m4a"></audio></td>
+<td><audio controls preload="none" src="audio/nr56-B.m4a"></audio></td>
+</tr>
+
+<!-- 65 -->
+<tr>
+<td>65</td>
+<td><audio controls preload="none" src="audio/nr65-S.m4a"></audio></td>
+<td><audio controls preload="none" src="audio/nr65-A.m4a"></audio></td>
+<td><audio controls preload="none" src="audio/nr65-T.m4a"></audio></td>
+<td><audio controls preload="none" src="audio/nr65-B.m4a"></audio></td>
+</tr>
+
+<!-- 68 -->
+<tr>
+<td>68</td>
+<td><audio controls preload="none" src="audio/nr68-S.m4a"></audio></td>
+<td><audio controls preload="none" src="audio/nr68-A.m4a"></audio></td>
+<td><audio controls preload="none" src="audio/nr68-T.m4a"></audio></td>
+<td><audio controls preload="none" src="audio/nr68-B.m4a"></audio></td>
+</tr>
+
+</tbody>
+</table>
+
+<script>
+const players = document.querySelectorAll("audio");
+
+players.forEach(player => {
+    player.addEventListener("play", () => {
+        players.forEach(other => {
+            if (other !== player) {
+                other.pause();
+                other.currentTime = 0;
+            }
+        });
+    });
+});
+</script>
+
+</body>
+</html>
