Add footer with historical notes about BWV 245

--- a/index.html
+++ b/index.html
@@ -57,6 +57,19 @@ header p {
     text-transform: uppercase;
 }
 
+footer {
+    max-width: 860px;
+    margin: 40px auto 0;
+    padding-top: 20px;
+    border-top: 1px solid var(--border);
+    font-size: 0.82rem;
+    color: #7a6a58;
+    line-height: 1.7;
+}
+
+footer p { margin: 0 0 0.5em; }
+footer p:last-child { margin-bottom: 0; }
+
 .table-wrap {
     max-width: 860px;
     margin: 0 auto;
@@ -326,6 +339,12 @@ audio {
 </tbody>
 </table>
 </div>
+
+<footer>
+    <p>Die Johannespassion BWV 245 wurde am <strong>7. April 1724</strong> in der Thomaskirche Leipzig uraufgeführt — Bachs erstes großes Passionswerk als Thomaskantor.</p>
+    <p>Das Werk gliedert sich in Rezitative, Arien, Chöre und Choräle. <strong>Nr. 1 ist der Eingangschor</strong> („Herr, unser Herrscher“); der erste Choral erscheint erst als Nr. 7 („O große Lieb“). Die Lücken in der Nummerierung — also fehlende Nummern zwischen den Chorälen — sind keine Auslassungen, sondern Rezitative, Arien und Chöre.</p>
+    <p>Die Nummern folgen der <strong>Bach-Gesellschaft-Ausgabe (BG)</strong>, der historischen Gesamtausgabe, und stimmen mit den meisten gedruckten Partituren überein.</p>
+</footer>
 
 <script src="lyrics.js"></script>
 <script>
